js/src/tests/test262/built-ins/Error/prototype/S15.11.3.1_A3_T1.js
assert
(
Error
.
hasOwnProperty
(
'
prototype
'
)
)
;
var
__obj
=
Error
.
prototype
;
verifyNotWritable
(
Error
"
prototype
"
null
function
(
)
{
return
"
shifted
"
;
}
)
;
assert
.
sameValue
(
Error
.
prototype
__obj
)
;
reportCompare
(
0
0
)
;
